--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,18 @@ body{
     z-index: 1;
 }
 .movie-card{
+    background-size: cover;
     width:300px;
     height:200px;
+}
+.overlay{
+    opacity: 0;
+}
+
+.movie-card:hover .overlay{
+    opacity: 1;
+    background: rgba(43,41,41,0.9);
+    width: 100%;
+    height: 100%;
+    transition: 0.2s ease-in-out;
 }
